--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <title>Portal de Serviços</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Seu acesso fácil e rápido ao Poder Legislativo Municipal de Pacatuba.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
