--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#0D47A1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Seu acesso fácil e rápido ao Poder Legislativo Municipal de Pacatuba."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
